refactor(security): melhorar configuração de segurança
- refatorar applicationauditaware
- melhorar jwttokenprovider
- otimizar securityconfig
- ajustar validador de senha
- aplicar boas práticas de segurança